# edu

./: .commit  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: addition.md  alteration.md  correction.md  feature-request.md  template.md
doc/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/: algorithm.rs  lib.rs  structure.rs
src/algorithm/: merge.rs  mod.rs  search.rs  sort.rs
src/algorithm/sort/: bubble.rs  comparison.rs  heap.rs  insertion.rs  merge.rs  misc.rs  mod.rs  quick.rs  selection.rs
src/algorithm/sort/comparison/: bubble.rs  cycle.rs  heap.rs  insertion.rs  merge.rs  misc.rs  mod.rs  quick.rs  selection.rs
src/primitive/: mod.rs
src/structure/: collection.rs  mod.rs
src/structure/collection/: linear.rs  mod.rs
src/structure/collection/graph/: directed.rs  mod.rs
src/structure/collection/graph/rooted_tree/: adelson_velsky_landis.rs  mod.rs
src/structure/collection/graph/tree/: adelson_velsky_landis.rs  mod.rs  rooted.rs
src/structure/collection/graph/tree/binary/: adelson_velsky_landis.rs  mod.rs
src/structure/collection/linear/: array.rs  list.rs  mod.rs  queue.rs  stack.rs
src/structure/collection/linear/array/: dope.rs  dynamic.rs  fixed.rs  iter.rs  mod.rs
src/structure/collection/linear/array/fixed/: iter.rs  ops.rs
src/structure/collection/linear/array/iter/: immutable.rs  iter.rs  itermut.rs  mod.rs  mutable.rs
src/structure/collection/linear/list/: doubly.rs  mod.rs  singly.rs
src/system/: mod.rs
src/text/: mod.rs
