# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "edu"
version = "0.16.0"
description = "An educational reference alternative standard library for Rust."

license = "Unlicense"
license-file = "LICENSE"

edition = "2024"
rust-version = "1.90"

authors = ["Tyler St. Onge <tyler@stonge.dev>"]

readme = "README.md"
repository = "https://github.com/oddnerd/edu"

keywords = ["reference"]
categories = ["algorithms", "data-structures", "mathematics"]

publish = false

[dependencies]
# None!

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html

[lints.rustdoc]
# https://doc.rust-lang.org/rustdoc/lints.html
