# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "edu"
version = "0.16.0"
description = "An educational reference alternative standard library for Rust."

license = "Unlicense"

edition = "2024"
rust-version = "1.90"

authors = ["Tyler St. Onge <tyler@stonge.dev>"]

readme = "README.md"
repository = "https://github.com/oddnerd/edu"

keywords = ["reference"]
categories = ["algorithms", "data-structures", "mathematics"]

publish = false

[dependencies]
# None!

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/index.html

warnings = {level = "deny", priority = -1}

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html

correctness = {level = "deny", priority = -1}
suspicious = {level = "deny", priority = -1}
complexity = {level = "deny", priority = -1}
perf = {level = "deny", priority = -1}
style = {level = "deny", priority = -1}
pedantic = {level = "deny", priority = -1}
restriction = {level = "allow", priority = -1}
cargo = {level = "deny", priority = -1}
nursery = {level = "warn", priority = -1}

# Restriction
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "deny"
arithmetic_side_effects = "deny"
as_conversions = "warn"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "deny"
deref_by_slicing = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "deny"
expect_used = "deny"
filetype_is_file = "warn"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
implicit_return = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
integer_division = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_docs_in_private_items = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "warn"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "warn"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
pointer_format = "deny"
precedence_bits = "deny"
print_stderr = "warn"
print_stdout = "deny"
pub_use = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
shadow_unrelated = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "deny"

[lints.rustdoc]
# https://doc.rust-lang.org/rustdoc/lints.html

broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
private_doc_tests = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"
